Tue Mar 04 17:45:09 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c:
	- merged a part of Sybase patch

Tue Mar 04 11:43:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/convert.c: spell fix

Mon Mar 03 22:19:31 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update
	* src/tds/unittests/convert.c: fix an error computing speed

Mon Mar  3 13:32:04 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c bcp out of null datetime writes nothing.

Sun Mar 02 21:32:19 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/numeric.c src/tds/unittests/t0008.c:
	- new implementation for tds_numeric_to_string

Sun Mar 02 16:14:39 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/numeric.c: start to rewrite tds_numeric_to_string

Sun Mar 02 10:46:34 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: support placeholder with SQLExecDirect

Sat Mar 01 21:17:29 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	- free some unneeded memory
	* src/odbc/unittests/funccall.c:
	- work on Sybase
	- add test for SQLExecDirect (not working)

Sat Mar  1 05:36:40 EST 2003	JK Lowden <jklowden@schemamania.org>
	* vms/config_h.vms	    config.h template
	* vms/configure.com	    configuration script
	* vms/descrip_mms.template  Makefile template
	* vms/getpass.c 	    implements missing function
	* vms/libodbc.opt	    for linking against dynamic library
	* vms/odbc_driver_axp.opt   linker file to create dynamic library
	* vms/odbc_unimplemented.c  stub for missing ODBC routines
	* vms/README.vms	    VMS-specific documentation
	- Committed patch from Craig A. Berry <craigberry@mac.com> 
	- received Mon 3 Feb 2003 01:28:03 -0500 (EST) on mailing list.  
	  
Thu Feb 27 20:48:48 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml: ASA footnote
