@@ -1,3 +1,8 @@
+Tue Mar 04 17:51:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h src/dblib/dblib.c src/tds/convert.c:
+	* src/tds/query.c src/tds/token.c:
+	- merged Bill Thompson patch on dblib
+
 Tue Mar 04 17:45:09 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c:
 	- merged a part of Sybase patch
